git subrepo pull framework
subrepo:
  subdir:   "framework"
  merged:   "a30a9f6388"
upstream:
  origin:   "git@github.com:daisy/pipeline-framework.git"
  branch:   "master"
  commit:   "56ebd4e452"
git-subrepo:
  version:  "0.3.1"
  origin:   "???"
  commit:   "???"